--- a/code/outliers.ipynb
+++ b/code/outliers.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "id": "738db51d",
    "metadata": {},
    "outputs": [],
@@ -20,13 +20,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# train.to_csv('train.csv', index=False)\n",
-    "# test.to_csv('test.csv', index=False)"
+    "# train.to_csv('pp_train.csv', index=False)\n",
+    "# test.to_csv('pp_test.csv', index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "id": "52820825",
    "metadata": {},
    "outputs": [],
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "id": "b2db4c5d",
    "metadata": {},
    "outputs": [],
