--- a/report_data_semantics/capitolo5.tex
+++ b/report_data_semantics/capitolo5.tex
@@ -1,21 +1,26 @@
 \chapter{Pattern Mining}
 \label{ch:capitolo2}
-The pattern mining technique chosen for this task was Apriori.
-To perform this task, continuous attributes were discretized according to
-their distributions. The objective of this process was creating bins that were both meaningful
-and balanced in terms of number of attributes for each bin.
-Among all the available attributes, the ones chosen for the pattern mining task are the following (with their corresponding binning):
-\textbf{AGGIUSTARE QUANDO VERRANNO GESTITI OUTLIER e quando avremo var definitive - cambiare nome var runtimebruno}
+The chosen pattern mining technique was Apriori. To perform this task, continuous attributes were discretized according to their distributions. 
+The objective of this process was to identify bins that were both semantically meaningful and sufficiently balanced in terms of number of records per bin. 
+Among all the available numerical attributes, the ones chosen for the pattern mining task are the following (with their corresponding binning):
+\textbf{Aggiustare var sotto quando avremo var definitive }
 \begin{itemize}
-    \item \texttt{runTimeMinutes\_Bruno}: VeryLowRT (0-25), LowRT (26-60), MediumRT (61-120), HighRT (121-180), VeryHighRT (181-3000)
-    \item \texttt{numVotes}: VeryLowV (5-15), LowV (16-50), MediumV (51-150), HighV (151-997), VeryHighV (1001-966565)
+    \item \texttt{runtimeMinutes\_TitleType}: VeryLowRT (3-30), LowRT (31-60), MediumRT (61-90), HighRT (91-170) 
+    \item \texttt{numVotes}: VeryLowNV (5-15), LowNV (16-50), MediumNV (51-150), HighNV (151-997), VeryHighNV (1001-966565) 
     \item \texttt{rating}: VeryLowR (1-3), LowR (4-6), MediumR (7), HighR (8), VeryHighR (9-10)
-    \item \texttt{userReviewsTotal}: NoUR (0), FewUR (1-2), ManyUR (4-13), VeryManyUR (31-149)
-    \item \texttt{countryOfOrigin\_EU, \_NA, \_OC, \_AS, \_AF, \_SA}: not\_from\_[continent name], is\_from\_[continent name]
+    \item \texttt{userReviewsTotal}: NoUR (0), FewUR (1-3), ManyUR (4-30), VeryManyUR (31-5727)
+    \item \texttt{totalCredits}: VeryLowC (0-15), LowC (16-35), MediumC (36-65), HighC (66-200), VeryHighC (201-15742)
+    \item \texttt{criticReviewsTotal}: NoCR(0), FewCR(1), ModerateCR(2-5), ManyCR(6-20), VeryHighCR (21-45), ExtremelyHighCR (46-533)
 \end{itemize}
-In addition, \texttt{titleType} was \textbf{come l'abbiamo gestita per PM? non c'è one hot encoding quindi l'abbiamo usata così com'è}.
-The data on which this task was performed was not normalized.
 
+Regarding discrete attributes, \texttt{titleType} was considered for this task but being kept as it is. 
+On the other hand, for \texttt{countryOfOrigin\_[continent code]}\footnote{see subsection 1.1.3 for the list of the 7 features} it has been decided to create one variable for each continent, i.e. \texttt{from\_[continent name]}, which has been binarized into:
+\begin{itemize}
+    \item \texttt{not\_from\_[continent name]}: when the value of the attribute is 0
+    \item \texttt{is\_from\_[continent name]}: when the value of the attribute is >= 1
+\end{itemize}
+
+The data on which this task was performed was not normalized. 
 
 \section{Extraction of frequent patterns}\label{sec:freq_patterns}
 
