hierarchical final + silhouette scores for different linkage methods

--- a/code/clustering_k-means.ipynb
+++ b/code/clustering_k-means.ipynb
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -465,7 +465,7 @@
     "axs[0].set(xlabel='k', ylabel='SSE')\n",
     "\n",
     "sns.lineplot(x=range(len(sil_list)), y=sil_list, marker='o', ax=axs[1])\n",
-    "axs[1].set(xlabel='k', ylabel='Silhouette')\n",
+    "axs[1].set(xlabel='k', ylabel='adsfasdfasdf')\n",
     "\n",
     "plt.tight_layout()\n",
     "# plt.savefig('C:\\\\Users\\\\Gagia\\\\Desktop\\\\progetto DM\\\\report_data_semantics\\\\plots\\\\sse_silh_kmeans.png')"
