--- a/report_data_semantics/capitolo2.tex
+++ b/report_data_semantics/capitolo2.tex
@@ -121,5 +121,23 @@ To conclude, by adjusting \textit{eps} and \textit{Minpts} appropriately, the cl
 
 \section{Hierarchical clustering}\label{sec:hierarchical}
 
+\begin{figure}[h]
+    \centering
+    \begin{subfigure}[b]{0.49\textwidth}
+        \centering
+        \includegraphics[width=\textwidth]{plots/sil_scores_hierarchical_w_outliers.png}
+        \caption{Clustering scores with outliers}
+        \label{fig:hier_sil_scores_outliers}
+    \end{subfigure}
+    \begin{subfigure}[b]{0.49\textwidth}
+        \centering
+        \includegraphics[width=\textwidth]{plots/sil_scores_hierarchical_no_outliers.png}
+        \caption{Clustering scores without outliers}
+        \label{fig:hier_sil_scores_no_outliers}
+    \end{subfigure}
+    \caption{Silhouette scores for hierarchical clustering with different linkage methods}
+    \label{fig:three_subplots}
+\end{figure}
+
 
 \section{General considerations}\label{sec:considerations}
